# new_admin_panel_sprint_1

movies_admin/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  django-ng.conf  docker-compose.yml  env.template  models_test.py  pyproject.toml  run_nginx.sh  uwsgi.ini
movies_admin/config/: .env.local_for_test  .env.template  settings.py  urls.py
movies_admin/config/components/: base.py  database.py  installed_apps.py  middleware.py  static.py
movies_admin/movies/: admin.py  apps.py  models.py  search.py
movies_admin/movies/locale/en/LC_MESSAGES/: django.mo  django.po
movies_admin/movies/locale/ru/LC_MESSAGES/: django.mo  django.po
movies_admin/movies/migrations/: 0001_initial.py
movies_admin/movies/models_tools/: choices.py  validators.py
schema_design/: content_schema.sql
sqlite_to_postgres/: .env.template  async_load_data.py  config.py  pyproject.toml  sync_load_data.py
sqlite_to_postgres/async_load/: database.py  etl.py  models.py  tests.py
sqlite_to_postgres/sync_load/: clear.py  postgres_saver.py  queries.py  sqlite_loader.py  tests.py  transform_data.py
