[tool.poetry]
name = "sqlite-to-postgres"
version = "0.1.0"
description = ""
authors = ["mikheyev9 <mikheyev9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
psycopg = {extras = ["c"], version = "^3.2.3"}
python-dotenv = "^1.0.1"
aiosqlite = "^0.20.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
